add loading connections from file

--- a/Lab_3.vcxproj
+++ b/Lab_3.vcxproj
@@ -197,6 +197,7 @@
     <ClInclude Include="Van_type.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="railway_model_connections.txt" />
     <Text Include="railway_model_stations.txt" />
     <Text Include="train_1_route.txt" />
     <Text Include="train_2_route.txt" />
